thymeleaf in progress

--- a/src/main/webapp/WEB-INF/views/game.html
+++ b/src/main/webapp/WEB-INF/views/game.html
@@ -3,9 +3,8 @@
 <head th:substituteby="fragments/headTag :: headTag">
 </head>
 <body class="tundra spring">
-	<div id="main_div" th:include="fragments/bodyHeader :: header" th:remove="tag">
+	<div id="main_div" th:include="fragments/bodyHeader :: header">
 		<div id="main"></div>
 	</div>
-	<div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
