added jettty plugin

--- a/src/main/webapp/WEB-INF/views/game.html
+++ b/src/main/webapp/WEB-INF/views/game.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head th:substituteby="fragments/headTag :: headTag">
+<head th:replace="fragments/headTag :: headTag">
 </head>
 <body class="tundra spring">
 	<div id="main_div" th:include="fragments/bodyHeader :: header">
