--- a/src/main/webapp/WEB-INF/views/listgames.html
+++ b/src/main/webapp/WEB-INF/views/listgames.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
+
 <head th:replace="fragments/headTag :: headTag">
 </head>
+
 <body class="tundra spring">
-	<div id="main_div" th:include="fragments/bodyHeader :: header">
-		<div id="main">
-			<div th:unless="${#lists.isEmpty(games)}">
 
-				<h2>List of Games</h2>
+	<div id="main_div">
 
-				<table>
-					<thead>
-						<tr>
-							<th>Game Id</th>
-							<th>Title</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr th:each="game : ${games}">
-							<td th:text="${game.gameId}"></td>
-							<td th:text="${game.title}">yes</td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
+		<div th:replace="fragments/bodyHeader :: header"></div>
+
+		<div th:unless="${#lists.isEmpty(games)}">
+
+			<h2>List of Games</h2>
+
+			<table>
+				<thead>
+					<tr>
+						<th>Game Id</th>
+						<th>Title</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="game : ${games}">
+						<td th:text="${game.gameId}"></td>
+						<td th:text="${game.title}">yes</td>
+					</tr>
+				</tbody>
+			</table>
 		</div>
 	</div>
+
 </body>
 </html>
