--- a/src/main/webapp/WEB-INF/views/readOnlyGame.html
+++ b/src/main/webapp/WEB-INF/views/readOnlyGame.html
@@ -3,10 +3,6 @@
 	xmlns:th="http://www.thymeleaf.org">
 <head th:include="fragments/headTag :: headTag">
 
-<script type="text/javascript" src="scripts/chess.js"></script>
-
-<link rel="stylesheet" type="text/css" href="styles/chess.css" />
-
 </head>
 <body class="tundra spring">
 
@@ -17,9 +13,10 @@
 		<div id="main">
 
 			<div id="chess-container">
-				<div th:each="sq : ${#numbers.sequence( 0, 63)}"
-					th:class="${sq % 8 == 0}? 'row'">
-					<div th:id="'square_' + ${sq}" class="square"></div>
+				<div th:each="sqRow : ${#numbers.sequence( 0, 7)}" class="row">
+					<div th:each="sqCol : ${#numbers.sequence( 0, 7)}">
+						<div th:id="'square_' + ${sqRow * 8 + sqCol}" class="square"></div>
+					</div>
 				</div>
 			</div>
 		</div>
