--- a/src/main/webapp/WEB-INF/views/fragments/headTag.html
+++ b/src/main/webapp/WEB-INF/views/fragments/headTag.html
@@ -18,6 +18,10 @@
 <script type="text/javascript"
 	src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
 
+<script type="text/javascript" src="scripts/chess.js"></script>
+
+<link rel="stylesheet" type="text/css" href="styles/chess.css" />
+
 <title>Welcome to Vikas World!</title>
 </head>
 
