--- a/src/main/webapp/WEB-INF/views/familyPhotos.html
+++ b/src/main/webapp/WEB-INF/views/familyPhotos.html
@@ -16,9 +16,9 @@
 <script type="text/javascript"
 	src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
 
-<script type="text/javascript" src="scripts/chess.js"></script>
+<script type="text/javascript" src="scripts/photos.js"></script>
 
-<link rel="stylesheet" type="text/css" href="styles/chess.css" />
+<link rel="stylesheet" type="text/css" href="styles/photos.css" />
 
 <title>Welcome to Vikas World!</title>
 </head>
@@ -29,30 +29,26 @@
 		<div th:replace="fragments/bodyHeader :: header"></div>
 
 		<div id="breadcrumb">
-			<a th:href="@{'/'}">Home</a> >> <a th:href="@{'/chess/index.htm'}">Chess</a>
-			>> Vote Chess
+			<a th:href="@{'/'}">Home</a> >> <a th:href="@{'/personal/index.htm'}">Personal</a>
+			>> Family Photos
 			<hr />
 		</div>
 
 		<table class="normal">
 
 			<tr>
-				<td th:text="#{title_myPhotos}" height="50"></td>
+				<td th:text="#{title_familyPhotos}" height="50"></td>
 			</tr>
 
 		</table>
 
-		<div id="main">
+		<P th:utext="${htmlStr}"></P>
 
-			<div id="chess-container">
-				<div th:each="sqRow : ${#numbers.sequence( 0, 7)}" class="row">
-					<div th:each="sqCol : ${#numbers.sequence( 0, 7)}">
-						<div th:id="'square_' + ${sqRow * 8 + sqCol}" class="square"></div>
-					</div>
-				</div>
-			</div>
-		</div>
 	</div>
+
+	<script>
+		loadAlbum(1);
+	</script>
 
 </body>
 </html>
