--- a/src/main/webapp/WEB-INF/views/favourites.html
+++ b/src/main/webapp/WEB-INF/views/favourites.html
@@ -16,10 +16,6 @@
 <script type="text/javascript"
 	src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
 
-<script type="text/javascript" src="scripts/chess.js"></script>
-
-<link rel="stylesheet" type="text/css" href="styles/chess.css" />
-
 <title>Welcome to Vikas World!</title>
 </head>
 <body class="tundra spring">
@@ -30,29 +26,25 @@
 
 		<div id="breadcrumb">
 			<a th:href="@{'/'}">Home</a> >> <a th:href="@{'/chess/index.htm'}">Chess</a>
-			>> Vote Chess
+			>> Favourites
 			<hr />
 		</div>
 
 		<table class="normal">
 
 			<tr>
-				<td th:text="#{title_myPhotos}" height="50"></td>
+				<td th:text="#{title.chesslinks}" height="50"></td>
 			</tr>
 
 		</table>
 
-		<div id="main">
+		<P th:utext="${htmlStr}"></P>
 
-			<div id="chess-container">
-				<div th:each="sqRow : ${#numbers.sequence( 0, 7)}" class="row">
-					<div th:each="sqCol : ${#numbers.sequence( 0, 7)}">
-						<div th:id="'square_' + ${sqRow * 8 + sqCol}" class="square"></div>
-					</div>
-				</div>
-			</div>
-		</div>
 	</div>
+
+	<script>
+		loadAlbum(1);
+	</script>
 
 </body>
 </html>
