--- a/src/main/webapp/WEB-INF/views/resetPassword.html
+++ b/src/main/webapp/WEB-INF/views/resetPassword.html
@@ -28,23 +28,23 @@
 
 		</table>
 
-		<form th:object="${person}">
+		<form th:object="${person}" method="post">
 
-			<input type="hidden" th:field="personId" />
-			<input type="hidden" th:field="name" />
-			<input type="hidden" th:field="emailAddress" />
-			<input type="hidden" th:field="firstName" />
-			<input type="hidden" th:field="lastName" />
-			<input type="hidden" th:field="gender" />
-			<input type="hidden" th:field="country" />
+			<input type="hidden" th:field="*{personId}" />
+			<input type="hidden" th:field="*{name}" />
+			<input type="hidden" th:field="*{emailAddress}" />
+			<input type="hidden" th:field="*{firstName}" />
+			<input type="hidden" th:field="*{lastName}" />
+			<input type="hidden" th:field="*{gender}" />
+			<input type="hidden" th:field="*{country}" />
 
-			<table border=0 align="center">
+			<table border="0" align="center">
 				<tr>
 					<td th:text="#{label.password}"></td>
-					<td><input type="password" th:field="password" /></td>
+					<td><input type="password" th:field="*{password}" /></td>
 				</tr>
 				<tr>
-					<td colspan="3"><input type="submit" value="Reset Password"></td>
+					<td colspan="3"><input type="submit" value="Reset Password" /></td>
 				</tr>
 			</table>
 		</form>
