promotion window change

--- a/src/main/webapp/WEB-INF/views/computerChess.html
+++ b/src/main/webapp/WEB-INF/views/computerChess.html
@@ -53,6 +53,20 @@
 				</div>
 			</div>
 
+		<div id="white_promotion_window">
+		 	<img id="WQ" src='images/WQ.png' />
+		 	<img id="WR" src='images/WR.png' />
+		 	<img id="WB" src='images/WB.png' />
+		 	<img id="WN" src='images/WN.png' />
+		 </div>
+		 
+		 <div id="black_promotion_window">
+		 	<img id="BQ" src='images/BQ.png' />
+		 	<img id="BR" src='images/BR.png' />
+		 	<img id="BB" src='images/BB.png' />
+		 	<img id="BN" src='images/BN.png' />
+		 </div>
+ 
 			<div>
 				<input type='button' onclick='javascript:newGame();'
 					value='New Game' />
