--- a/src/main/webapp/WEB-INF/views/technology.html
+++ b/src/main/webapp/WEB-INF/views/technology.html
@@ -299,6 +299,9 @@ Jaxp vs JaxB. Why JaxB, it consumes too much memory<BR/>
 SOAP vs REST<BR/>
 what is endpoint in web-service<BR/>
 What is top-down and bottom-up approaches in web-services<BR/>
+How to handle unchecked exceptions in Web-Services<BR/>
+What are different retry strategies in Web Services<BR/>
+What is Web Services architecture triangle<BR/>
 What are CDATA and PDATA in xml (Character and Parse)<BR/>
 What is the input for web-service. what tool you have used?<BR/>
 Which parser will u use to cache xml data<BR/>
