rating comparison chart added

--- a/src/main/webapp/WEB-INF/views/chess.html
+++ b/src/main/webapp/WEB-INF/views/chess.html
@@ -70,6 +70,15 @@
 			<span th:text="#{title_favouriteChessLinks}"></span>
 		</fieldset>
 
+		<p></p>
+
+		<fieldset>
+			<legend>
+				<a href="ratingChart.htm">Rating Comparison Chart</a>
+			</legend>
+			<span th:text="#{title_ratingComparisonChart}"></span>
+		</fieldset>
+
 	</div>
 </body>
 </html>
