--- a/src/main/webapp/WEB-INF/views/readOnlyGame.html
+++ b/src/main/webapp/WEB-INF/views/readOnlyGame.html
@@ -38,7 +38,7 @@
 		<table class="normal">
 
 			<tr>
-				<td th:text="#{title_myPhotos}" height="50"></td>
+				<td th:text="#{title_voteChess}" height="50"></td>
 			</tr>
 
 		</table>
