--- a/src/main/webapp/WEB-INF/views/myGames.html
+++ b/src/main/webapp/WEB-INF/views/myGames.html
@@ -17,8 +17,6 @@
 <script type="text/javascript"
 	src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
 
-<script type="text/javascript" src="scripts/mygames.js"></script>
-
 <link rel="stylesheet" type="text/css" href="styles/mygames.css" />
 
 <title>Welcome to Vikas World!</title>
@@ -99,6 +97,8 @@
 		</div>
 	</div>
 
+	<script type="text/javascript" src="scripts/mygames.min.js"></script>
+
 	<script>
 		loadGame(1);
 
@@ -112,5 +112,6 @@
 			}
 		});
 	</script>
+
 </body>
 </html>
