--- a/src/main/webapp/WEB-INF/views/computerChess.html
+++ b/src/main/webapp/WEB-INF/views/computerChess.html
@@ -17,8 +17,6 @@
 <script type="text/javascript"
 	src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
 
-<script type="text/javascript" src="scripts/chess.js"></script>
-
 <link rel="stylesheet" type="text/css" href="styles/chess.css" />
 
 <title>Welcome to Vikas World!</title>
@@ -78,6 +76,8 @@
 			</div>
 		</div>
 	</div>
+
+<script type="text/javascript" src="scripts/chess.min.js"></script>
 
 </body>
 </html>
